refactor: Lottos 을 Immutable 하게 변경
* Muable List 로부터 Lottos 가 초기화되면 Side Effect 가 발생할 수 있다.
* Mutable 한 Collectors.toList() 가 들어올지 Immtutable 한 toList() 가 들어올지 모른다.
* 따라서 Lottos 내부에서 Immutable List 로 변경하여 초기화 시킨다.